--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,10 @@ span {
   font-family: inherit;
   font-weight: inherit;
 }
+.blueShadow {
+  box-shadow: 3px 3px 0 0 #60a5fa;
+}
+.blueShadow:hover {
+  transform: translate(-3px, -3px);
+  box-shadow: 3px 3px 0 0 #60a5fa;
+}
