--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -22,3 +22,24 @@
     padding: 0.5rem;
     width:  15rem;
 }
+.plan:nth-child(2){
+    background: rgb(93, 117, 158); 
+    transform: scale(1.1);
+}
+.plan>:nth-child(3){
+    font-size:  3rem;
+    font-weight: bold;
+}
+.features{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.feature{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    .img{
+        width: 1rem;
+    }
+}
