--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -1,6 +1,6 @@
 .plans-container {
     margin-top: 4rem;
-    /* padding: 0 2rem; */
+    padding-bottom: 4rem;
     display: flex;
     flex-direction: column;
     gap: 4rem;
